--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,6 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    <a href="http://railstutorial.org/">One More Twitter clone..</a>
   </small>
   <nav>
     <ul>
@@ -10,4 +9,4 @@
       <li><a href="http://news.railstutorial.org/">News</a></li>
     </ul>
   </nav>
-</footer>   3
+</footer>
